# quick-card-maker

./: README.md  pyproject.toml  trash.txt
.gitub/: CODEOWNERS
command/: GUIDE.md  README.md  finish.ps1  new.ps1  restore.ps1  resume.ps1  save.ps1  undo.ps1  update.ps1
command/utils/: fix_import.ps1  update.ps1
