[project]
name = "quick-card-maker"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "KLimaLima", email = "138441635+KLimaLima@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
